# PFE-3D-Decimator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: context.h  mesh.h  plyreader.h
src/: cliloader.cpp  context.cpp  main.cpp  mesh.cpp  plyreader.cpp
